[package]
name = "echapp_city_builder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
bevy_asset_loader = { version = "0.17" }

# keep the following in sync with Bevy's dependencies
image = { version = "0.24", default-features = false }
winit = { version = "0.28", default-features = false }